loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:10: error: not found: value nbBaggle
  if (nbBaggle>=3){
      ^